# OpenGL_Viewer

./: .gitignore  CMakeLists.txt  README.md
asset/MarchingCube/: G_lattice.stl
output/: g_field_parallel_2_cube.stl  remeshstl.ply  single_g_cell.stl
src/GurobiMIP/: CMakeLists.txt  main.cpp
src/MarchingCube/: CMakeLists.txt  main.cpp
src/SSDO/: SSDOApp.h
